# CFD-Lite

./: CMakeLists.txt  Makefile  README.md  build.py  input.py
src/: main.f90
src/VTK/: catalyst.h  cfd_adaptor.cpp  cfd_adaptor.h  cfd_catalyst.cpp  cfd_writer.cpp  mod_vtk.f90  vtk.h
src/equations/: mod_energy.f90  mod_mfr.f90  mod_ndf.f90  mod_scalar.f90  mod_task_launcher.f90  mod_uvwp.f90  mod_vfr.f90
src/modules/: mod_cgns.f90  mod_eqn_setup.f90  mod_multiphase.f90  mod_physics.f90  mod_properties.f90  mod_solver.f90  mod_solver_cuda.f90  mod_subdomains.f90  mod_util.f90  mod_util_cuda.f90  mod_vtu_output.f90
src/setup/: calc_aip_xyzip.f90  calc_vol_cv_centers.f90  cell_input.f90  mod_agglomeration.f90  mod_meshds_uns.f90  mod_mg_lvl_uns.f90
test/: channel.cgns
